# cicd-init

./: .gitignore  Dockerfile  Makefile  README.md  install.sh  pyproject.toml
cicd_init/: __init__.py  __main__.py  cli.py  detect.py  generator.py  templates.py
scripts/: deploy-server.sh
