[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-init"
version = "0.1.0"
description = "Auto-detect frontend project and generate GitLab CI / GitHub Actions config"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.scripts]
cicd-init = "cicd_init.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cicd_init*"]
